--- a/resources/views/content.twig
+++ b/resources/views/content.twig
@@ -4,7 +4,7 @@
     <input type="hidden" name="sessionID" value="abc123">
     <input type="hidden" name="amount" value="499.99">
     <input type="hidden" name="dealerID" value="804625">
-    <input type="hidden" name="dealerText" value="https://www.yourshop.com/targobank-response">
+    <input type="hidden" name="dealerText" value="https://www.villastore24.de/targobank-response">
     <input type="hidden" name="documentno" value="order123">
     <input type="hidden" name="hash" value="{{ hash }}">
 </form>
