--- a/resources/views/PaymentMethod.twig
+++ b/resources/views/PaymentMethod.twig
@@ -1,33 +1,26 @@
-{% set paymentId = 0 %}
-{% set paidStatus = '' %}
+{% block paymentMethods %}
+    <div class="payment-methods">
+        {% for paymentMethod in services.basket.paymentMethods %}
+            <div class="payment-method">
+                <input type="radio" name="paymentMethodId" value="{{ paymentMethod.id }}" id="payment-method-{{ paymentMethod.id }}">
+                <label for="payment-method-{{ paymentMethod.id }}">
+                    <img src="{{ paymentMethod.icon }}" alt="{{ paymentMethod.name }}">
+                    {{ paymentMethod.name }}
+                </label>
+            </div>
+        {% endfor %}
 
-{% set properties = order.properties %}
-
-{% for property in properties %}
-  {% if property.typeId == 3 %}
-    {% set paymentId = property.value %}
-  {% endif %}
-  {% if property.typeId == 4 %}
-    {% set paidStatus = property.value %}
-  {% endif %}
-{% endfor %}
-{% if (paymentId == paymentMethodId) and (paidStatus != 'fullyPaid') %}
-  {% set display = "block" %}
-{% else %}
-  {% set display = "none" %}
-{% endif %}
-
-{% if services.template.isCurrentTemplate('tpl.my-account') %}
-  <button id="reinitPaymentMethod-{{order.id}}" class="btn btn-primary btn-block" @click="" data-toggle="modal" data-target="#paymentMethod" :disabled="" style="display: {{ display }}; margin-top: 0.5rem">
-    {{ trans("Targobank::PaymentMethod.myAccountReinitPayment") }}
-  </button>
-{% elseif services.template.isCurrentTemplate('tpl.confirmation') %}
-  <div id="reinitPaymentMethod-{{order.id}}" class="row con-reinit" style="display: {{ display }};">
-    <strong class="col-xs-6 col-sm-5"></strong>
-    <span class="col-xs-6 col-sm-7">
-      <a class="payment-confirmation-btn" @click="" data-toggle="modal" data-target="#paymentMethod" :disabled="">
-        <span>{{ trans("Targobank::PaymentMethod.myAccountReinitPayment") }}</span>
-      </a>
-    </span>
-  </div>
-{% endif %}
+        <!-- Add the TARGOBANK Payment Method -->
+        {% for paymentMethod in services.basket.paymentMethods %}
+            {% if paymentMethod.methodKey == 'targobank::Targobank' %}
+                <div class="payment-method">
+                    <input type="radio" name="paymentMethodId" value="{{ paymentMethod.id }}" id="payment-method-{{ paymentMethod.id }}">
+                    <label for="payment-method-{{ paymentMethod.id }}">
+                        <img src="{{ paymentMethod.icon }}" alt="{{ paymentMethod.name }}">
+                        {{ paymentMethod.name }}
+                    </label>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+{% endblock %}
